# fileflip

./: .gitignore  LAUNCH-GUIDE.md  MAC_APP_STORE_GUIDE.md  README.md  package-lock.json  package.json
.github/: MACOS_BUILD_SETUP.md
.github/workflows/: build-macos.yml  build.yml
landing-page/: SEO-STRATEGY.md  contact.html  index.html  privacy.html  robots.txt  script.js  sitemap.xml  styles.css  terms.html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/tests/: conversion_tests.rs
src/components/: ConversionPanel.tsx  DropZone.tsx  EmptyState.tsx  FileItem.tsx  FileList.tsx  Header.tsx  SettingsPanel.tsx  Toast.tsx  index.ts
src/hooks/: useFiles.ts
src/types/: index.ts
test_files/: create_test_images.ps1
